--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html encoding = "UTF-8">
 <head>
-	<title> Binay Kumar Griri</title>
+	<title> Binay Kumar Giri</title>
 	
 </head>
 
