--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>Sap ABAP Consultant
 <br>Work Experience: 6 years
 <br>Email: Binaykumarxxxx@gmail.com
-<br>Mobile: +91 78294xxxx3
+<br>Mobile: +xx xx294xxxx3
 </div>
 
 <h2>Objective:</h2>
