Added Style Sheet Again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html encoding = "UTF-8">
 <head>
 	<title> Binay Kumar Giri12</title>
-	
+	<link rel="stylesheet" href="resume.css">
 </head>
 
 <body>
