--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Binay Kumar Giri</h1>
 <br>Sap ABAP Consultant
 <br>Work Experience: 6 years
-<br>Email: Binaykumarxxxx@gmail.com
+<br>Email: Binayxxxxxxx@gmail.com
 <br>Mobile: +xx xx294xxxx3
 </div>
 
